force-app/main/default/objects/Case/fields/Account_Server_URL__c.field-meta.xml
<CustomField>
    <fullName>Account_Server_URL__c</fullName>
    <label>Account Server URL</label>
    <length>30</length>
    <type>Text</type>
</CustomField>