force-app/main/default/objects/Case/fields/Account_Team_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Meeting__c</fullName>
    <label>Account Team Meeting</label>
    <type>Date</type>
</CustomField>