force-app/main/default/objects/Case/fields/Activation_Materials_Requested__c.field-meta.xml
<CustomField>
    <fullName>Activation_Materials_Requested__c</fullName>
    <label>Engagement Materials Requested</label>
    <type>Date</type>
</CustomField>