force-app/main/default/objects/Case/fields/Activation_Materials_Sent__c.field-meta.xml
<CustomField>
    <fullName>Activation_Materials_Sent__c</fullName>
    <label>Engagement Materials Sent</label>
    <type>Date</type>
</CustomField>