force-app/main/default/objects/Case/fields/Activation_Plan_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Activation_Plan_to_Client__c</fullName>
    <label>Engagement Plan to Client</label>
    <type>Date</type>
</CustomField>