force-app/main/default/objects/Case/fields/Activation_Process__c.field-meta.xml
<CustomField>
    <fullName>Activation_Process__c</fullName>
    <label>Engagement Process?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>