force-app/main/default/objects/Case/fields/Actual_Alumni_SALT_Connect_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Alumni_SALT_Connect_Date__c</fullName>
    <label>(Alumni) SALT Connect Date</label>
    <type>Date</type>
</CustomField>