force-app/main/default/objects/Case/fields/Actual_Enrolled_SALT_Connect_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Enrolled_SALT_Connect_Date__c</fullName>
    <label>(Enrolled) SALT Connect Date</label>
    <type>Date</type>
</CustomField>