force-app/main/default/objects/Case/fields/Actual_Go_Live_Date_EDMS__c.field-meta.xml
<CustomField>
    <fullName>Actual_Go_Live_Date_EDMS__c</fullName>
    <label>Actual Go-Live Date - EDMS</label>
    <type>Date</type>
</CustomField>