force-app/main/default/objects/Case/fields/Actual_Topics__c.field-meta.xml
<CustomField>
    <fullName>Actual_Topics__c</fullName>
    <description>Used by the counselor to select one or many topics covered with the Contact.</description>
    <inlineHelpText>Select one or many topics covered with the Contact.</inlineHelpText>
    <label>Actual Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>College planning/paying for college (parents and students)</fullName>
            </value>
            <value>
                <fullName>Beginning student loan repayment</fullName>
            </value>
            <value>
                <fullName>Comparing_repayment_plans_and_or_postponing_payments</fullName>
            </value>
            <value>
                <fullName>Consolidation and refinance</fullName>
            </value>
            <value>
                <fullName>Resolving delinquent student loans</fullName>
            </value>
            <value>
                <fullName>Forgiveness for student loans</fullName>
            </value>
            <value>
                <fullName>General student loan information</fullName>
            </value>
            <value>
                <fullName>General financial information (budgeting, credit, saving, etc.)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>