force-app/main/default/objects/Case/fields/ASA_Activation_Email__c.field-meta.xml
<CustomField>
    <fullName>ASA_Activation_Email__c</fullName>
    <label>ASA Launch Email</label>
    <type>Date</type>
</CustomField>