force-app/main/default/objects/Case/fields/Barrier__c.field-meta.xml
<CustomField>
    <fullName>Barrier__c</fullName>
    <label>Secondary Barrier Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Implementation Call</fullName>
            </value>
            <value>
                <fullName>Connect Date NOT Set</fullName>
            </value>
            <value>
                <fullName>Demographic File and NSLDS Access</fullName>
            </value>
            <value>
                <fullName>Demographic File</fullName>
            </value>
            <value>
                <fullName>NSLDS Access</fullName>
            </value>
            <value>
                <fullName>Lack Of Campus Support</fullName>
            </value>
            <value>
                <fullName>Connect Date in Future</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>