force-app/main/default/objects/Case/fields/Barrier_to_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Barrier_to_Implementation__c</fullName>
    <inlineHelpText>Select the value that best describes the primary reason for Barrier to Implementation.</inlineHelpText>
    <label>Barrier to Implementation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Implementation Call</fullName>
            </value>
            <value>
                <fullName>Connect Date Not Set</fullName>
            </value>
            <value>
                <fullName>Demographic File and NSLDS Access</fullName>
            </value>
            <value>
                <fullName>Demographic File</fullName>
            </value>
            <value>
                <fullName>NSLDS Access</fullName>
            </value>
            <value>
                <fullName>Lack of Campus Support</fullName>
            </value>
            <value>
                <fullName>Connect Date In Future</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>