force-app/main/default/objects/Case/fields/Billing_Set_Up_Form__c.field-meta.xml
<CustomField>
    <fullName>Billing_Set_Up_Form__c</fullName>
    <label>Billing Set Up Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>