force-app/main/default/objects/Case/fields/Borrower_Population__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Population__c</fullName>
    <label>Borrower Populations: Entered Repayment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing: Prior to 10/1/2009</fullName>
            </value>
            <value>
                <fullName>New: 10/1/2009 - 9/30/2010 or later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>