force-app/main/default/objects/Case/fields/BOS_Set_Up__c.field-meta.xml
<CustomField>
    <fullName>BOS_Set_Up__c</fullName>
    <label>BOS Set Up</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>