force-app/main/default/objects/Case/fields/BPMS_Profile_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>BPMS_Profile_Creation_Date__c</fullName>
    <description>Date the BPMS profile is complete</description>
    <label>BPMS Profile Creation Date</label>
    <type>Date</type>
</CustomField>