force-app/main/default/objects/Case/fields/Branch_Codes__c.field-meta.xml
<CustomField>
    <fullName>Branch_Codes__c</fullName>
    <label>Branch Codes</label>
    <length>80</length>
    <type>Text</type>
</CustomField>