force-app/main/default/objects/Case/fields/Business_Impact__c.field-meta.xml
<CustomField>
    <fullName>Business_Impact__c</fullName>
    <description>This field indicates the impact that this testing will have on the business; BD, Ops, LSR and Call Center.</description>
    <label>Business Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>