force-app/main/default/objects/Case/fields/Campus_Activation_Visit__c.field-meta.xml
<CustomField>
    <fullName>Campus_Activation_Visit__c</fullName>
    <label>Campus Engagement Visit</label>
    <type>Date</type>
</CustomField>