force-app/main/default/objects/Case/fields/Campus_re_engagement_meeting__c.field-meta.xml
<CustomField>
    <fullName>Campus_re_engagement_meeting__c</fullName>
    <label>Campus re-engagement meeting</label>
    <type>Date</type>
</CustomField>