force-app/main/default/objects/Case/fields/Client_Ad_on_SALT__c.field-meta.xml
<CustomField>
    <fullName>Client_Ad_on_SALT__c</fullName>
    <label>Client Ad on SALT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>