force-app/main/default/objects/Case/fields/Client_Onboarding_Folder_Set_Up_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Onboarding_Folder_Set_Up_Status__c</fullName>
    <label>Client Onboarding Folder Set Up Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>