force-app/main/default/objects/Case/fields/Client_Portal_Access__c.field-meta.xml
<CustomField>
    <fullName>Client_Portal_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A check in this field indicates the customer established has an account on the Client Portal.</inlineHelpText>
    <label>Client Portal Access</label>
    <type>Checkbox</type>
</CustomField>