force-app/main/default/objects/Case/fields/Client_SALT_Access_granted__c.field-meta.xml
<CustomField>
    <fullName>Client_SALT_Access_granted__c</fullName>
    <description>The Date that client received access to saltmoney.org</description>
    <inlineHelpText>access to saltmoney.org</inlineHelpText>
    <label>Client SALT Access granted</label>
    <type>Date</type>
</CustomField>