force-app/main/default/objects/Case/fields/CM_SALT_Member_Account__c.field-meta.xml
<CustomField>
    <fullName>CM_SALT_Member_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A check in this field indicates the Client Manager has established a SALT account for this client.</inlineHelpText>
    <label>CM SALT Member Account</label>
    <type>Checkbox</type>
</CustomField>