force-app/main/default/objects/Case/fields/Co_Branded_Website__c.field-meta.xml
<CustomField>
    <fullName>Co_Branded_Website__c</fullName>
    <label>Co-Branded Website</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Intiated</fullName>
            </value>
            <value>
                <fullName>Yes - Completed</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>