force-app/main/default/objects/Case/fields/Collateral_Setup__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Setup__c</fullName>
    <label>Collateral Setup</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WIP</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>