force-app/main/default/objects/Case/fields/Comm_Materials_Sent__c.field-meta.xml
<CustomField>
    <fullName>Comm_Materials_Sent__c</fullName>
    <label>Comm Materials Sent</label>
    <type>Date</type>
</CustomField>