force-app/main/default/objects/Case/fields/Comm_Mktg_Materials_Requested__c.field-meta.xml
<CustomField>
    <fullName>Comm_Mktg_Materials_Requested__c</fullName>
    <label>Comm Mktg Materials Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>Email Copy</fullName>
            </value>
            <value>
                <fullName>Letter Copy</fullName>
            </value>
            <value>
                <fullName>Fliers</fullName>
            </value>
            <value>
                <fullName>Print Ad</fullName>
            </value>
            <value>
                <fullName>Banner Ad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>