force-app/main/default/objects/Case/fields/Communications_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Communications_Calendar__c</fullName>
    <description>Date Communications Calendar is delivered to Client</description>
    <label>Communications Calendar Sent</label>
    <type>Date</type>
</CustomField>