force-app/main/default/objects/Case/fields/Confidentiality_Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Agreement_Status__c</fullName>
    <label>Confidentiality Agreement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>