force-app/main/default/objects/Case/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <formula>Account.Contract_End__c</formula>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>