force-app/main/default/objects/Case/fields/Contract_requested__c.field-meta.xml
<CustomField>
    <fullName>Contract_requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract requested</label>
    <type>Checkbox</type>
</CustomField>