force-app/main/default/objects/Case/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <formula>Account.Contract_Start__c</formula>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>