force-app/main/default/objects/Case/fields/Count_Down__c.field-meta.xml
<CustomField>
    <fullName>Count_Down__c</fullName>
    <formula>IF(ISPICKVAL(Status,&quot;WIP&quot;),
  (60 + Contract_Start_Date__c) -(today()),NULL)</formula>
    <inlineHelpText>This field calculates the number of days remaining for the Implementation to complete while the Status = WIP.  The standard is 60 days.</inlineHelpText>
    <label>Count Down</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>