force-app/main/default/objects/Case/fields/Date_Digitial_Welcome_Guide_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Digitial_Welcome_Guide_Sent__c</fullName>
    <label>Date Digitial Welcome Guide Sent</label>
    <type>Date</type>
</CustomField>