force-app/main/default/objects/Case/fields/Date_to_Send_SALT_Intro_Letter__c.field-meta.xml
<CustomField>
    <fullName>Date_to_Send_SALT_Intro_Letter__c</fullName>
    <label>Date to Send SALT Intro Letter</label>
    <type>Date</type>
</CustomField>