force-app/main/default/objects/Case/fields/Demog_File_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Demog_File_Processed_Date__c</fullName>
    <label>Demog File Processed Date</label>
    <type>Date</type>
</CustomField>