force-app/main/default/objects/Case/fields/Demog_File_Status__c.field-meta.xml
<CustomField>
    <fullName>Demog_File_Status__c</fullName>
    <label>Demog File Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WIP</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>