force-app/main/default/objects/Case/fields/Demog_Template_Sent__c.field-meta.xml
<CustomField>
    <fullName>Demog_Template_Sent__c</fullName>
    <label>Demog Template Sent</label>
    <type>Date</type>
</CustomField>