force-app/main/default/objects/Case/fields/Dest_Address__c.field-meta.xml
<CustomField>
    <fullName>Dest_Address__c</fullName>
    <description>This is the destination account for all outbound CommonLine or CR:C files to customers.</description>
    <label>Destination Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>