force-app/main/default/objects/Case/fields/EDM_Communication_Executed__c.field-meta.xml
<CustomField>
    <fullName>EDM_Communication_Executed__c</fullName>
    <description>This is when the first EDM communication has been sent.</description>
    <label>EDM Communication Executed</label>
    <type>Date</type>
</CustomField>