force-app/main/default/objects/Case/fields/EDMS_Activated__c.field-meta.xml
<CustomField>
    <fullName>EDMS_Activated__c</fullName>
    <description>This is when the EDMS profile has been updated so communciations can begin.</description>
    <inlineHelpText>THis is when the EDMS profile has been updated so communciations can begin.</inlineHelpText>
    <label>EDMS Activated</label>
    <type>Date</type>
</CustomField>