force-app/main/default/objects/Case/fields/EDMS_Custom_On_Board_Email__c.field-meta.xml
<CustomField>
    <fullName>EDMS_Custom_On_Board_Email__c</fullName>
    <label>EDMS Custom On Board Email</label>
    <type>Date</type>
</CustomField>