force-app/main/default/objects/Case/fields/Email2Case_TO_Address__c.field-meta.xml
<CustomField>
    <fullName>Email2Case_TO_Address__c</fullName>
    <description>Storing the email address associated with organisation-wide-address, If the record is created via &quot;Email-to-case&quot;</description>
    <label>Email2Case TO Address</label>
    <type>Email</type>
</CustomField>