force-app/main/default/objects/Case/fields/Expected_Go_Live_EDMS__c.field-meta.xml
<CustomField>
    <fullName>Expected_Go_Live_EDMS__c</fullName>
    <label>Expected Go-Live EDMS</label>
    <type>Date</type>
</CustomField>