force-app/main/default/objects/Case/fields/Expected_Go_Live_MM_101__c.field-meta.xml
<CustomField>
    <fullName>Expected_Go_Live_MM_101__c</fullName>
    <label>Expected Go-Live SALT Courses</label>
    <type>Date</type>
</CustomField>