force-app/main/default/objects/Case/fields/FAMS_Sign_off__c.field-meta.xml
<CustomField>
    <fullName>FAMS_Sign_off__c</fullName>
    <label>Feed File Handler Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Testing</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>In Testing</fullName>
            </value>
            <value>
                <fullName>In Production</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>