force-app/main/default/objects/Case/fields/File_Format__c.field-meta.xml
<CustomField>
    <fullName>File_Format__c</fullName>
    <label>File Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>XML</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>CSV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>