force-app/main/default/objects/Case/fields/File_Source__c.field-meta.xml
<CustomField>
    <fullName>File_Source__c</fullName>
    <label>File Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Servicer</fullName>
            </value>
            <value>
                <fullName>ASA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>