force-app/main/default/objects/Case/fields/File_Type_s_ASA_Source__c.field-meta.xml
<CustomField>
    <fullName>File_Type_s_ASA_Source__c</fullName>
    <label>File Type(s): ASA Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACS</fullName>
            </value>
            <value>
                <fullName>AES</fullName>
            </value>
            <value>
                <fullName>Sallie Mae</fullName>
            </value>
            <value>
                <fullName>Nelnet</fullName>
            </value>
            <value>
                <fullName>Great Lakes</fullName>
            </value>
            <value>
                <fullName>Citibank</fullName>
            </value>
            <value>
                <fullName>Mohela</fullName>
            </value>
            <value>
                <fullName>ECSI</fullName>
            </value>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
            <value>
                <fullName>XLS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>