force-app/main/default/objects/Case/fields/Files_Tested__c.field-meta.xml
<CustomField>
    <fullName>Files_Tested__c</fullName>
    <label>Files Tested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DER</fullName>
            </value>
            <value>
                <fullName>DELQQ</fullName>
            </value>
            <value>
                <fullName>DEMOG</fullName>
            </value>
            <value>
                <fullName>Private / Ins. Loan</fullName>
            </value>
            <value>
                <fullName>Nelnet</fullName>
            </value>
            <value>
                <fullName>SLMA</fullName>
            </value>
            <value>
                <fullName>Great Lakes</fullName>
            </value>
            <value>
                <fullName>ACS</fullName>
            </value>
            <value>
                <fullName>AES</fullName>
            </value>
            <value>
                <fullName>PHEAA</fullName>
            </value>
            <value>
                <fullName>Citibank</fullName>
            </value>
            <value>
                <fullName>Student Loan Express</fullName>
            </value>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
            <value>
                <fullName>Mohela</fullName>
            </value>
            <value>
                <fullName>ECSI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>