force-app/main/default/objects/Case/fields/Final_Count_Down_Number__c.field-meta.xml
<CustomField>
    <fullName>Final_Count_Down_Number__c</fullName>
    <description>This field holds the final number of days it took for the implementation to change from WIP status/complete.</description>
    <label>Final Count Down Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>